fixed main pages wrapper overflow

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ body {
 }
 
 .content-wrapper {
-    width: 100%;
     height: 100%;
     overflow-y: scroll;
     padding: 16px;
